fit_predictor/mkp_aco/evaluates/run15/2025-01-27_13-07-27/evaluations/problem_eval4764892933965362558_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 6
    item_averages = np.array([np.mean(prize), np.mean(weight[:, i]) for i in range(m)])
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: did you forget parentheses around the comprehension target?
